[gd_scene load_steps=13 format=3 uid="uid://c5e8o6ck43bbj"]

[ext_resource type="Script" path="res://Levels/hellius-corridoors.gd" id="1_5x6b2"]
[ext_resource type="PackedScene" uid="uid://b0fn3ogr4nvsx" path="res://Scenes/player.tscn" id="2_v10fa"]
[ext_resource type="PackedScene" uid="uid://nneplcyswr75" path="res://Scenes/tile_map.tscn" id="4_4h5yx"]
[ext_resource type="AudioStream" uid="uid://xgae1d8xqckt" path="res://asstes/inventory/sound/wronganswer-37702.mp3" id="6_w4awj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2w3f"]
size = Vector2(22, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cduvd"]
size = Vector2(42, 636)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8od8o"]
size = Vector2(350.75, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vvuva"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72x2y"]
size = Vector2(20, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4kf3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5sb6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jmy0c"]

[node name="hellius-corridoors" type="Node2D"]
script = ExtResource("1_5x6b2")

[node name="Player" parent="." instance=ExtResource("2_v10fa")]
position = Vector2(199, 68)

[node name="puzzle_room1" type="Area2D" parent="."]
position = Vector2(225, 23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="puzzle_room1"]
position = Vector2(-1, -20)
shape = SubResource("RectangleShape2D_g2w3f")

[node name="puzzle_room4" type="Area2D" parent="."]
position = Vector2(380, -179)

[node name="CollisionShape2D" type="CollisionShape2D" parent="puzzle_room4"]
position = Vector2(4, 180)
shape = SubResource("RectangleShape2D_g2w3f")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="puzzle_room4"]
stream = ExtResource("6_w4awj")

[node name="Spawn_locations" type="Node2D" parent="."]

[node name="room1" type="Marker2D" parent="Spawn_locations"]
position = Vector2(223, 23)

[node name="room2" type="Marker2D" parent="Spawn_locations"]
position = Vector2(300, 93)

[node name="room3" type="Marker2D" parent="Spawn_locations"]
position = Vector2(580, 284)

[node name="room4" type="Marker2D" parent="Spawn_locations"]
position = Vector2(29, 335)

[node name="room5" type="Marker2D" parent="Spawn_locations"]
position = Vector2(299, 582)

[node name="room6" type="Marker2D" parent="Spawn_locations"]
position = Vector2(299, 501)

[node name="room0" type="Marker2D" parent="Spawn_locations"]
position = Vector2(26, 59)

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2(-19, 304)
shape = SubResource("RectangleShape2D_cduvd")

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D2"]
position = Vector2(630, 301)
shape = SubResource("RectangleShape2D_cduvd")

[node name="StaticBody2D3" type="StaticBody2D" parent="Walls"]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D3"]
position = Vector2(629, -300)
shape = SubResource("RectangleShape2D_cduvd")

[node name="StaticBody2D4" type="StaticBody2D" parent="Walls"]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D4"]
position = Vector2(-20, -298)
shape = SubResource("RectangleShape2D_cduvd")

[node name="StaticBody2D5" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D5"]
position = Vector2(303.5, 138)
shape = SubResource("RectangleShape2D_8od8o")

[node name="StaticBody2D6" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D6"]
position = Vector2(305, 469)
shape = SubResource("RectangleShape2D_8od8o")

[node name="StaticBody2D7" type="StaticBody2D" parent="Walls"]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D7"]
position = Vector2(304.25, -469)
shape = SubResource("RectangleShape2D_8od8o")

[node name="StaticBody2D8" type="StaticBody2D" parent="Walls"]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D8"]
position = Vector2(302.375, -139)
shape = SubResource("RectangleShape2D_8od8o")

[node name="puzzle_room2" type="Area2D" parent="."]
position = Vector2(304, 121)

[node name="CollisionShape2D" type="CollisionShape2D" parent="puzzle_room2"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_vvuva")

[node name="puzzle_room3" type="Area2D" parent="."]
position = Vector2(606, 283)

[node name="CollisionShape2D" type="CollisionShape2D" parent="puzzle_room3"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_72x2y")

[node name="room4" type="Area2D" parent="."]
position = Vector2(27, 333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="room4"]
position = Vector2(-26, 4)
shape = SubResource("RectangleShape2D_u4kf3")

[node name="room5" type="Area2D" parent="."]
position = Vector2(302, 600)

[node name="CollisionShape2D" type="CollisionShape2D" parent="room5"]
position = Vector2(2, 9)
shape = SubResource("RectangleShape2D_v5sb6")

[node name="room6" type="Area2D" parent="."]
position = Vector2(1005, 471)

[node name="CollisionShape2D" type="CollisionShape2D" parent="room6"]
position = Vector2(-701, 10)
shape = SubResource("RectangleShape2D_v5sb6")

[node name="TileMap" parent="." instance=ExtResource("4_4h5yx")]
layer_0/tile_data = PackedInt32Array(0, 524291, 3, 1, 589827, 3, 2, 589827, 3, 3, 589827, 3, 4, 589827, 3, 5, 589827, 3, 65536, 524291, 4, 131072, 524291, 4, 196608, 524291, 4, 262144, 524291, 4, 327680, 524291, 4, 65537, 589827, 4, 131073, 589827, 4, 196609, 589827, 4, 262145, 589827, 4, 327681, 589827, 4, 65538, 589827, 4, 131074, 589827, 4, 196610, 589827, 4, 262146, 589827, 4, 327682, 589827, 4, 65539, 589827, 4, 131075, 589827, 4, 196611, 589827, 4, 262147, 589827, 4, 327683, 589827, 4, 65540, 589827, 4, 131076, 589827, 4, 196612, 589827, 4, 262148, 589827, 4, 327684, 589827, 4, 65541, 589827, 4, 131077, 589827, 4, 196613, 589827, 4, 262149, 589827, 4, 327685, 589827, 4, 65542, 589827, 4, 131078, 589827, 4, 196614, 589827, 4, 262150, 589827, 4, 327686, 589827, 4, 393222, 589827, 4, 393217, 589827, 4, 393218, 589827, 4, 393219, 589827, 4, 393220, 589827, 4, 393221, 589827, 4, 393216, 524291, 4, 6, 589827, 3, 458753, 589827, 4, 458754, 589827, 4, 458755, 589827, 4, 458756, 589827, 4, 458757, 589827, 4, 458758, 589827, 4, 65543, 589827, 4, 131079, 589827, 4, 196615, 589827, 4, 262151, 589827, 4, 327687, 589827, 4, 393223, 589827, 4, 7, 589827, 3, 458752, 524291, 4, 458759, 851971, 3, 8, 589827, 3, 9, 589827, 3, 10, 589827, 3, 11, 589827, 3, 12, 589827, 3, 13, 589827, 3, 14, 589827, 3, 15, 589827, 3, 16, 589827, 3, 17, 589827, 3, 18, 589827, 3, 19, 589827, 3, 20, 589827, 3, 21, 589827, 3, 22, 589827, 3, 23, 589827, 3, 28, 589827, 3, 24, 589827, 3, 25, 589827, 3, 26, 589827, 3, 27, 589827, 3, 29, 589827, 3, 30, 589827, 3, 524288, 524291, 4, 589824, 524291, 4, 1900544, 524291, 4, 1835008, 524291, 4, 1769472, 524291, 4, 1703936, 524291, 4, 1966080, 524291, 4, 1638400, 524291, 4, 1572864, 524291, 4, 1507328, 524291, 4, 1441792, 524291, 4, 1376256, 524291, 4, 1310720, 524291, 4, 1245184, 524291, 4, 1179648, 524291, 4, 1114112, 524291, 4, 1048576, 524291, 4, 983040, 524291, 4, 655360, 524291, 4, 720896, 524291, 4, 786432, 524291, 4, 851968, 524291, 4, 917504, 524291, 4, 36, 589827, 3, 35, 589827, 3, 34, 589827, 3, 33, 589827, 3, 32, 589827, 3, 31, 589827, 3, 37, 655363, 3, 2359296, 524291, 4, 2293760, 524291, 4, 2228224, 524291, 4, 2162688, 524291, 4, 2097152, 524291, 4, 2031616, 524291, 4, 2424832, 524291, 5, 2424833, 589827, 5, 2424834, 589827, 5, 2424835, 589827, 5, 2424836, 589827, 5, 2424837, 589827, 5, 2424838, 589827, 5, 2424839, 589827, 5, 2424840, 589827, 5, 2424841, 589827, 5, 2424842, 589827, 5, 2424843, 589827, 5, 2424844, 589827, 5, 2424845, 589827, 5, 2424846, 589827, 5, 2424847, 589827, 5, 2424848, 589827, 5, 2424849, 589827, 5, 2424850, 589827, 5, 2424851, 589827, 5, 2424852, 589827, 5, 2424853, 589827, 5, 2424854, 589827, 5, 2424855, 589827, 5, 2424856, 589827, 5, 2424857, 589827, 5, 2424858, 589827, 5, 2424859, 589827, 5, 2424860, 589827, 5, 2424861, 589827, 5, 2424862, 589827, 5, 2424863, 589827, 5, 2424864, 589827, 5, 2424865, 589827, 5, 2424866, 589827, 5, 2424867, 589827, 5, 2424868, 589827, 5, 2424869, 655363, 5, 2359333, 655363, 4, 2293797, 655363, 4, 2228261, 655363, 4, 2162725, 655363, 4, 2097189, 655363, 4, 2031653, 655363, 4, 1966117, 655363, 4, 1900581, 655363, 4, 1835045, 655363, 4, 1769509, 655363, 4, 1703973, 655363, 4, 1638437, 655363, 4, 1572901, 655363, 4, 1507365, 655363, 4, 1441829, 655363, 4, 1376293, 655363, 4, 1310757, 655363, 4, 1245221, 655363, 4, 1179685, 655363, 4, 1114149, 655363, 4, 1048613, 655363, 4, 983077, 655363, 4, 917541, 655363, 4, 852005, 655363, 4, 786469, 655363, 4, 65573, 655363, 4, 131109, 655363, 4, 196645, 655363, 4, 262181, 655363, 4, 327717, 655363, 4, 393253, 655363, 4, 458789, 655363, 4, 524325, 655363, 4, 589861, 655363, 4, 655397, 655363, 4, 720933, 655363, 4, 524295, 655363, 4, 589831, 655363, 4, 655367, 655363, 4, 720903, 655363, 4, 786439, 655363, 4, 851975, 655363, 4, 917511, 655363, 4, 983047, 655363, 4, 1048583, 655363, 4, 1114119, 655363, 4, 1179655, 655363, 4, 1245191, 655363, 4, 1310727, 655363, 4, 1376263, 655363, 4, 1441799, 655363, 4, 1507335, 655363, 4, 1572871, 655363, 4, 1638407, 655363, 4, 1703943, 655363, 4, 1769479, 655363, 4, 1835015, 655363, 4, 1900551, 655363, 4, 1966087, 851971, 4, 1966088, 589827, 3, 1966089, 589827, 3, 1966090, 589827, 3, 1966091, 589827, 3, 1966092, 589827, 3, 1966093, 589827, 3, 1966094, 589827, 3, 1966095, 589827, 3, 1966096, 589827, 3, 1966097, 589827, 3, 1966098, 589827, 3, 1966099, 589827, 3, 1966100, 589827, 3, 1966101, 589827, 3, 1966102, 589827, 3, 1966103, 589827, 3, 1966104, 589827, 3, 1966105, 589827, 3, 1966106, 589827, 3, 1966107, 589827, 3, 1966108, 589827, 3, 1966110, 917507, 4, 1966109, 589827, 3, 1900574, 524291, 4, 1835038, 524291, 4, 1769502, 524291, 4, 1703966, 524291, 4, 1638430, 524291, 4, 1572894, 524291, 4, 1507358, 524291, 4, 1441822, 524291, 4, 1376286, 524291, 4, 1310750, 524291, 4, 1245214, 524291, 4, 1179678, 524291, 4, 1114142, 524291, 4, 1048606, 524291, 4, 983070, 524291, 4, 917534, 524291, 4, 851998, 524291, 4, 786462, 524291, 4, 720926, 524291, 4, 655390, 524291, 4, 589854, 524291, 4, 458782, 917507, 3, 524318, 524291, 4, 458781, 589827, 5, 458780, 589827, 5, 458779, 589827, 5, 458778, 589827, 5, 458777, 589827, 5, 458776, 589827, 5, 458775, 589827, 5, 458774, 589827, 5, 458773, 589827, 5, 458772, 589827, 5, 458771, 589827, 5, 458770, 589827, 5, 458769, 589827, 5, 458768, 589827, 5, 458767, 589827, 5, 458766, 589827, 5, 458765, 589827, 5, 458764, 589827, 5, 458763, 589827, 5, 458762, 589827, 5, 458761, 589827, 5, 458760, 589827, 5, 524289, 589827, 4, 589825, 589827, 4, 655361, 589827, 4, 720897, 589827, 4, 786433, 589827, 4, 851969, 589827, 4, 917505, 589827, 4, 983041, 589827, 4, 1048577, 589827, 4, 1114113, 589827, 4, 1179649, 589827, 4, 1245185, 589827, 4, 1310721, 589827, 4, 1376257, 589827, 4, 1441793, 589827, 4, 1507329, 589827, 4, 1572865, 589827, 4, 1638401, 589827, 4, 1703937, 589827, 4, 1769473, 589827, 4, 1835009, 589827, 4, 1900545, 589827, 4, 1966081, 589827, 4, 2031617, 589827, 4, 2097153, 589827, 4, 524290, 589827, 4, 589826, 589827, 4, 655362, 589827, 4, 720898, 589827, 4, 786434, 589827, 4, 851970, 589827, 4, 917506, 589827, 4, 983042, 589827, 4, 1048578, 589827, 4, 1114114, 589827, 4, 1179650, 589827, 4, 1245186, 589827, 4, 1310722, 589827, 4, 1376258, 589827, 4, 1441794, 589827, 4, 1507330, 589827, 4, 1572866, 589827, 4, 1638402, 589827, 4, 1703938, 589827, 4, 1769474, 589827, 4, 1835010, 589827, 4, 1900546, 589827, 4, 1966082, 589827, 4, 2031618, 589827, 4, 2097154, 589827, 4, 524291, 589827, 4, 589827, 589827, 4, 655363, 589827, 4, 720899, 589827, 4, 786435, 589827, 4, 851971, 589827, 4, 917507, 589827, 4, 983043, 589827, 4, 1048579, 589827, 4, 1114115, 589827, 4, 1179651, 589827, 4, 1245187, 589827, 4, 1310723, 589827, 4, 1376259, 589827, 4, 1441795, 589827, 4, 1507331, 589827, 4, 1572867, 589827, 4, 1638403, 589827, 4, 1703939, 589827, 4, 1769475, 589827, 4, 1835011, 589827, 4, 1900547, 589827, 4, 1966083, 589827, 4, 2031619, 589827, 4, 2097155, 589827, 4, 524292, 589827, 4, 589828, 589827, 4, 655364, 589827, 4, 720900, 589827, 4, 786436, 589827, 4, 851972, 589827, 4, 917508, 589827, 4, 983044, 589827, 4, 1048580, 589827, 4, 1114116, 589827, 4, 1179652, 589827, 4, 1245188, 589827, 4, 1310724, 589827, 4, 1376260, 589827, 4, 1441796, 589827, 4, 1507332, 589827, 4, 1572868, 589827, 4, 1638404, 589827, 4, 1703940, 589827, 4, 1769476, 589827, 4, 1835012, 589827, 4, 1900548, 589827, 4, 1966084, 589827, 4, 2031620, 589827, 4, 2097156, 589827, 4, 524293, 589827, 4, 589829, 589827, 4, 655365, 589827, 4, 720901, 589827, 4, 786437, 589827, 4, 851973, 589827, 4, 917509, 589827, 4, 983045, 589827, 4, 1048581, 589827, 4, 1114117, 589827, 4, 1179653, 589827, 4, 1245189, 589827, 4, 1310725, 589827, 4, 1376261, 589827, 4, 1441797, 589827, 4, 1507333, 589827, 4, 1572869, 589827, 4, 1638405, 589827, 4, 1703941, 589827, 4, 1769477, 589827, 4, 1835013, 589827, 4, 1900549, 589827, 4, 1966085, 589827, 4, 2031621, 589827, 4, 2097157, 589827, 4, 524294, 589827, 4, 589830, 589827, 4, 655366, 589827, 4, 720902, 589827, 4, 786438, 589827, 4, 851974, 589827, 4, 917510, 589827, 4, 983046, 589827, 4, 1048582, 589827, 4, 1114118, 589827, 4, 1179654, 589827, 4, 1245190, 589827, 4, 1310726, 589827, 4, 1376262, 589827, 4, 1441798, 589827, 4, 1507334, 589827, 4, 1572870, 589827, 4, 1638406, 589827, 4, 1703942, 589827, 4, 1769478, 589827, 4, 1835014, 589827, 4, 1900550, 589827, 4, 1966086, 589827, 4, 2031622, 589827, 4, 2097158, 589827, 4, 2162689, 589827, 4, 2228225, 589827, 4, 2293761, 589827, 4, 2359297, 589827, 4, 2162690, 589827, 4, 2228226, 589827, 4, 2293762, 589827, 4, 2359298, 589827, 4, 2162691, 589827, 4, 2228227, 589827, 4, 2293763, 589827, 4, 2359299, 589827, 4, 2162692, 589827, 4, 2228228, 589827, 4, 2293764, 589827, 4, 2359300, 589827, 4, 2162693, 589827, 4, 2228229, 589827, 4, 2293765, 589827, 4, 2359301, 589827, 4, 2162694, 589827, 4, 2228230, 589827, 4, 2293766, 589827, 4, 2359302, 589827, 4, 2031623, 589827, 4, 2097159, 589827, 4, 2162695, 589827, 4, 2228231, 589827, 4, 2293767, 589827, 4, 2359303, 589827, 4, 2031624, 589827, 4, 2097160, 589827, 4, 2162696, 589827, 4, 2228232, 589827, 4, 2293768, 589827, 4, 2359304, 589827, 4, 2031625, 589827, 4, 2097161, 589827, 4, 2162697, 589827, 4, 2228233, 589827, 4, 2293769, 589827, 4, 2359305, 589827, 4, 2031626, 589827, 4, 2097162, 589827, 4, 2162698, 589827, 4, 2228234, 589827, 4, 2293770, 589827, 4, 2359306, 589827, 4, 2031627, 589827, 4, 2097163, 589827, 4, 2162699, 589827, 4, 2228235, 589827, 4, 2293771, 589827, 4, 2359307, 589827, 4, 2031628, 589827, 4, 2097164, 589827, 4, 2162700, 589827, 4, 2228236, 589827, 4, 2293772, 589827, 4, 2359308, 589827, 4, 2031629, 589827, 4, 2097165, 589827, 4, 2162701, 589827, 4, 2228237, 589827, 4, 2293773, 589827, 4, 2359309, 589827, 4, 2031630, 589827, 4, 2097166, 589827, 4, 2162702, 589827, 4, 2228238, 589827, 4, 2293774, 589827, 4, 2359310, 589827, 4, 2031631, 589827, 4, 2097167, 589827, 4, 2162703, 589827, 4, 2228239, 589827, 4, 2293775, 589827, 4, 2359311, 589827, 4, 2031632, 589827, 4, 2097168, 589827, 4, 2162704, 589827, 4, 2228240, 589827, 4, 2293776, 589827, 4, 2359312, 589827, 4, 2031633, 589827, 4, 2097169, 589827, 4, 2162705, 589827, 4, 2228241, 589827, 4, 2293777, 589827, 4, 2359313, 589827, 4, 2031634, 589827, 4, 2097170, 589827, 4, 2162706, 589827, 4, 2228242, 589827, 4, 2293778, 589827, 4, 2359314, 589827, 4, 2031635, 589827, 4, 2097171, 589827, 4, 2162707, 589827, 4, 2228243, 589827, 4, 2293779, 589827, 4, 2359315, 589827, 4, 2031636, 589827, 4, 2097172, 589827, 4, 2162708, 589827, 4, 2228244, 589827, 4, 2293780, 589827, 4, 2359316, 589827, 4, 2031637, 589827, 4, 2097173, 589827, 4, 2162709, 589827, 4, 2228245, 589827, 4, 2293781, 589827, 4, 2359317, 589827, 4, 2031638, 589827, 4, 2097174, 589827, 4, 2162710, 589827, 4, 2228246, 589827, 4, 2293782, 589827, 4, 2359318, 589827, 4, 2031639, 589827, 4, 2097175, 589827, 4, 2162711, 589827, 4, 2228247, 589827, 4, 2293783, 589827, 4, 2359319, 589827, 4, 2031640, 589827, 4, 2097176, 589827, 4, 2162712, 589827, 4, 2228248, 589827, 4, 2293784, 589827, 4, 2359320, 589827, 4, 2031641, 589827, 4, 2097177, 589827, 4, 2162713, 589827, 4, 2228249, 589827, 4, 2293785, 589827, 4, 2359321, 589827, 4, 2031642, 589827, 4, 2097178, 589827, 4, 2162714, 589827, 4, 2228250, 589827, 4, 2293786, 589827, 4, 2359322, 589827, 4, 2031643, 589827, 4, 2097179, 589827, 4, 2162715, 589827, 4, 2228251, 589827, 4, 2293787, 589827, 4, 2359323, 589827, 4, 2031644, 589827, 4, 2097180, 589827, 4, 2162716, 589827, 4, 2228252, 589827, 4, 2293788, 589827, 4, 2359324, 589827, 4, 2031645, 589827, 4, 2097181, 589827, 4, 2162717, 589827, 4, 2228253, 589827, 4, 2293789, 589827, 4, 2359325, 589827, 4, 2031646, 589827, 4, 2097182, 589827, 4, 2162718, 589827, 4, 2228254, 589827, 4, 2293790, 589827, 4, 2359326, 589827, 4, 2031647, 589827, 4, 2097183, 589827, 4, 2162719, 589827, 4, 2228255, 589827, 4, 2293791, 589827, 4, 2359327, 589827, 4, 2031648, 589827, 4, 2097184, 589827, 4, 2162720, 589827, 4, 2228256, 589827, 4, 2293792, 589827, 4, 2359328, 589827, 4, 2031649, 589827, 4, 2097185, 589827, 4, 2162721, 589827, 4, 2228257, 589827, 4, 2293793, 589827, 4, 2359329, 589827, 4, 2031650, 589827, 4, 2097186, 589827, 4, 2162722, 589827, 4, 2228258, 589827, 4, 2293794, 589827, 4, 2359330, 589827, 4, 2031651, 589827, 4, 2097187, 589827, 4, 2162723, 589827, 4, 2228259, 589827, 4, 2293795, 589827, 4, 2359331, 589827, 4, 2031652, 589827, 4, 2097188, 589827, 4, 2162724, 589827, 4, 2228260, 589827, 4, 2293796, 589827, 4, 2359332, 589827, 4, 65567, 589827, 4, 131103, 589827, 4, 196639, 589827, 4, 262175, 589827, 4, 327711, 589827, 4, 393247, 589827, 4, 458783, 589827, 4, 524319, 589827, 4, 589855, 589827, 4, 655391, 589827, 4, 720927, 589827, 4, 786463, 589827, 4, 851999, 589827, 4, 917535, 589827, 4, 983071, 589827, 4, 1048607, 589827, 4, 1114143, 589827, 4, 1179679, 589827, 4, 1245215, 589827, 4, 1310751, 589827, 4, 1376287, 589827, 4, 1441823, 589827, 4, 1507359, 589827, 4, 1572895, 589827, 4, 1638431, 589827, 4, 1703967, 589827, 4, 1769503, 589827, 4, 1835039, 589827, 4, 1900575, 589827, 4, 1966111, 589827, 4, 65568, 589827, 4, 131104, 589827, 4, 196640, 589827, 4, 262176, 589827, 4, 327712, 589827, 4, 393248, 589827, 4, 458784, 589827, 4, 524320, 589827, 4, 589856, 589827, 4, 655392, 589827, 4, 720928, 589827, 4, 786464, 589827, 4, 852000, 589827, 4, 917536, 589827, 4, 983072, 589827, 4, 1048608, 589827, 4, 1114144, 589827, 4, 1179680, 589827, 4, 1245216, 589827, 4, 1310752, 589827, 4, 1376288, 589827, 4, 1441824, 589827, 4, 1507360, 589827, 4, 1572896, 589827, 4, 1638432, 589827, 4, 1703968, 589827, 4, 1769504, 589827, 4, 1835040, 589827, 4, 1900576, 589827, 4, 1966112, 589827, 4, 65569, 589827, 4, 131105, 589827, 4, 196641, 589827, 4, 262177, 589827, 4, 327713, 589827, 4, 393249, 589827, 4, 458785, 589827, 4, 524321, 589827, 4, 589857, 589827, 4, 655393, 589827, 4, 720929, 589827, 4, 786465, 589827, 4, 852001, 589827, 4, 917537, 589827, 4, 983073, 589827, 4, 1048609, 589827, 4, 1114145, 589827, 4, 1179681, 589827, 4, 1245217, 589827, 4, 1310753, 589827, 4, 1376289, 589827, 4, 1441825, 589827, 4, 1507361, 589827, 4, 1572897, 589827, 4, 1638433, 589827, 4, 1703969, 589827, 4, 1769505, 589827, 4, 1835041, 589827, 4, 1900577, 589827, 4, 1966113, 589827, 4, 65570, 589827, 4, 131106, 589827, 4, 196642, 589827, 4, 262178, 589827, 4, 327714, 589827, 4, 393250, 589827, 4, 458786, 589827, 4, 524322, 589827, 4, 589858, 589827, 4, 655394, 589827, 4, 720930, 589827, 4, 786466, 589827, 4, 852002, 589827, 4, 917538, 589827, 4, 983074, 589827, 4, 1048610, 589827, 4, 1114146, 589827, 4, 1179682, 589827, 4, 1245218, 589827, 4, 1310754, 589827, 4, 1376290, 589827, 4, 1441826, 589827, 4, 1507362, 589827, 4, 1572898, 589827, 4, 1638434, 589827, 4, 1703970, 589827, 4, 1769506, 589827, 4, 1835042, 589827, 4, 1900578, 589827, 4, 1966114, 589827, 4, 65571, 589827, 4, 131107, 589827, 4, 196643, 589827, 4, 262179, 589827, 4, 327715, 589827, 4, 393251, 589827, 4, 458787, 589827, 4, 524323, 589827, 4, 589859, 589827, 4, 655395, 589827, 4, 720931, 589827, 4, 786467, 589827, 4, 852003, 589827, 4, 917539, 589827, 4, 983075, 589827, 4, 1048611, 589827, 4, 1114147, 589827, 4, 1179683, 589827, 4, 1245219, 589827, 4, 1310755, 589827, 4, 1376291, 589827, 4, 1441827, 589827, 4, 1507363, 589827, 4, 1572899, 589827, 4, 1638435, 589827, 4, 1703971, 589827, 4, 1769507, 589827, 4, 1835043, 589827, 4, 1900579, 589827, 4, 1966115, 589827, 4, 65572, 589827, 4, 131108, 589827, 4, 196644, 589827, 4, 262180, 589827, 4, 327716, 589827, 4, 393252, 589827, 4, 458788, 589827, 4, 524324, 589827, 4, 589860, 589827, 4, 655396, 589827, 4, 720932, 589827, 4, 786468, 589827, 4, 852004, 589827, 4, 917540, 589827, 4, 983076, 589827, 4, 1048612, 589827, 4, 1114148, 589827, 4, 1179684, 589827, 4, 1245220, 589827, 4, 1310756, 589827, 4, 1376292, 589827, 4, 1441828, 589827, 4, 1507364, 589827, 4, 1572900, 589827, 4, 1638436, 589827, 4, 1703972, 589827, 4, 1769508, 589827, 4, 1835044, 589827, 4, 1900580, 589827, 4, 1966116, 589827, 4, 65544, 589827, 4, 131080, 589827, 4, 196616, 589827, 4, 262152, 589827, 4, 327688, 589827, 4, 393224, 589827, 4, 65545, 589827, 4, 131081, 589827, 4, 196617, 589827, 4, 262153, 589827, 4, 327689, 589827, 4, 393225, 589827, 4, 65546, 589827, 4, 131082, 589827, 4, 196618, 589827, 4, 262154, 589827, 4, 327690, 589827, 4, 393226, 589827, 4, 65547, 589827, 4, 131083, 589827, 4, 196619, 589827, 4, 262155, 589827, 4, 327691, 589827, 4, 393227, 589827, 4, 65548, 589827, 4, 131084, 589827, 4, 196620, 589827, 4, 262156, 589827, 4, 327692, 589827, 4, 393228, 589827, 4, 65549, 589827, 4, 131085, 589827, 4, 196621, 589827, 4, 262157, 589827, 4, 327693, 589827, 4, 393229, 589827, 4, 65550, 589827, 4, 131086, 589827, 4, 196622, 589827, 4, 262158, 589827, 4, 327694, 589827, 4, 393230, 589827, 4, 65551, 589827, 4, 131087, 589827, 4, 196623, 589827, 4, 262159, 589827, 4, 327695, 589827, 4, 393231, 589827, 4, 65552, 589827, 4, 131088, 589827, 4, 196624, 589827, 4, 262160, 589827, 4, 327696, 589827, 4, 393232, 589827, 4, 65553, 589827, 4, 131089, 589827, 4, 196625, 589827, 4, 262161, 589827, 4, 327697, 589827, 4, 393233, 589827, 4, 65554, 589827, 4, 131090, 589827, 4, 196626, 589827, 4, 262162, 589827, 4, 327698, 589827, 4, 393234, 589827, 4, 65555, 589827, 4, 131091, 589827, 4, 196627, 589827, 4, 262163, 589827, 4, 327699, 589827, 4, 393235, 589827, 4, 65556, 589827, 4, 131092, 589827, 4, 196628, 589827, 4, 262164, 589827, 4, 327700, 589827, 4, 393236, 589827, 4, 65557, 589827, 4, 131093, 589827, 4, 196629, 589827, 4, 262165, 589827, 4, 327701, 589827, 4, 393237, 589827, 4, 65558, 589827, 4, 131094, 589827, 4, 196630, 589827, 4, 262166, 589827, 4, 327702, 589827, 4, 393238, 589827, 4, 65559, 589827, 4, 131095, 589827, 4, 196631, 589827, 4, 262167, 589827, 4, 327703, 589827, 4, 393239, 589827, 4, 65560, 589827, 4, 131096, 589827, 4, 196632, 589827, 4, 262168, 589827, 4, 327704, 589827, 4, 393240, 589827, 4, 65561, 589827, 4, 131097, 589827, 4, 196633, 589827, 4, 262169, 589827, 4, 327705, 589827, 4, 393241, 589827, 4, 65562, 589827, 4, 131098, 589827, 4, 196634, 589827, 4, 262170, 589827, 4, 327706, 589827, 4, 393242, 589827, 4, 65563, 589827, 4, 131099, 589827, 4, 196635, 589827, 4, 262171, 589827, 4, 327707, 589827, 4, 393243, 589827, 4, 65564, 589827, 4, 131100, 589827, 4, 196636, 589827, 4, 262172, 589827, 4, 327708, 589827, 4, 393244, 589827, 4, 65565, 589827, 4, 131101, 589827, 4, 196637, 589827, 4, 262173, 589827, 4, 327709, 589827, 4, 393245, 589827, 4, 65566, 589827, 4, 131102, 589827, 4, 196638, 589827, 4, 262174, 589827, 4, 327710, 589827, 4, 393246, 589827, 4)
layer_1/tile_data = PackedInt32Array(-65523, 1441793, 0, 13, 1441793, 1, -65522, 1769473, 0, 14, 1769473, 1, 262143, 1441793, 65536, 196608, 1441793, 65537, 327679, 1769473, 65536, 262144, 1769473, 65537, 1441791, 1769473, 65536, 1376256, 1769473, 65537, 1376255, 1441793, 65536, 1310720, 1441793, 65537, 1900562, 1441793, 0, 1966098, 1441793, 1, 1900563, 1769473, 0, 1966099, 1769473, 1, 2490386, 1441793, 196608, 2424850, 1441793, 196609, 2490387, 1769473, 196608, 2424851, 1769473, 196609, 1179685, 1769473, 131073, 1179686, 1769473, 131072, 1114149, 1441793, 131073, 1114150, 1441793, 131072, -65513, 1441793, 8, 23, 1441793, 9, -65512, 1769473, 8, 24, 1769473, 9, 524307, 1769473, 196608, 458771, 1769473, 196609, 458770, 1441793, 196609, 524306, 1441793, 196608)

[node name="room0" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="room0"]
position = Vector2(2, 64)
shape = SubResource("RectangleShape2D_jmy0c")

[connection signal="body_entered" from="puzzle_room1" to="." method="_on_puzzle_room_1_body_entered" flags=18]
[connection signal="body_entered" from="puzzle_room4" to="." method="_on_puzzle_room_4_body_entered" flags=18]
[connection signal="body_entered" from="puzzle_room2" to="." method="_on_puzzle_room_2_body_entered" flags=18]
[connection signal="body_entered" from="puzzle_room3" to="." method="_on_puzzle_room_3_body_entered" flags=18]
[connection signal="body_entered" from="room4" to="." method="_on_room_4_body_entered" flags=18]
[connection signal="body_entered" from="room5" to="." method="_on_room_5_body_entered" flags=18]
[connection signal="body_entered" from="room6" to="." method="_on_room_6_body_entered" flags=18]
[connection signal="body_entered" from="room0" to="." method="_on_room_0_body_entered"]
